After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765973 - GtkRevealer need to always send "child-revealed" signal at end of animation.
GtkRevealer need to always send "child-revealed" signal at end of animation.
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.20.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-05-04 10:44 UTC by Matthieu Gautier
Modified: 2016-05-09 15:52 UTC
See Also:
GNOME target: ---
GNOME version: 3.19/3.20


Attachments
[GtkRevealer] Spawn the child-revealed signal at end of animation. (1.36 KB, patch)
2016-05-04 10:44 UTC, Matthieu Gautier
needs-work Details | Review

Description Matthieu Gautier 2016-05-04 10:44:22 UTC
Depending of float rounding during target calculation, the size of the
GtkRevealer can be set to zero will the animation is not finished.
If the GtkRevealer is in a GtkPaned, it will be hidden and so the animation
will be stopped before it is finished.

In this case, force the spawn of the child-revealed signal to let client
code know the animation is finished.
Comment 1 Matthieu Gautier 2016-05-04 10:44:26 UTC
Created attachment 327282 [details] [review]
[GtkRevealer] Spawn the child-revealed signal at end of animation.
Comment 2 Matthias Clasen 2016-05-05 12:21:10 UTC
Review of attachment 327282 [details] [review]:

This looks correct to me; we should notify the property when it changes.

But the commit message needs some work: child-realed is a property, not a signal. And signals get emitted, not spawned.
I would suggest: Emit notify::child-revealed when the animation is stopped
Comment 3 Matthias Clasen 2016-05-06 20:10:45 UTC
Committed with a slight rewording
Comment 4 Matthieu Gautier 2016-05-09 15:52:58 UTC
Yes, I didn't take time to reword the commit, sorry.

Thanks for committing it.